Closed Bug 1529407 Opened 5 years ago Closed 5 years ago

IAccessible::accValue returns null on body element with role="document"

Categories

(Core :: Disability Access APIs, defect, P3)

All
Windows
defect

Tracking

()

RESOLVED FIXED
mozilla67
Tracking Status
firefox67 --- fixed

People

(Reporter: Jamie, Assigned: Jamie)

Details

Attachments

(1 file)

STR (with the NVDA screen reader):

  1. Open this test case: data:text/html,<body role="document">test</body>
  2. Focus the document.
  3. Press NVDA+control+z to open the NVDA Python console.
  4. Enter this command: focus.IAccessibleObject.accValue(0)
  • Expected:u'data:text/html,<body role="document">test</body>'
  • Actual: nothing

This was reported to me privately via email. Some clients want to be able to retrieve the URL of the active document. They do this using accValue, but this breaks on sites which (redundantly) set role="document" on the body element.

Real world example: https://www.parisaeroport.fr/en/homepage

This is low priority, but it's a trivial fix, so I'll just do it while it's in my head.

Status: NEW → ASSIGNED
  1. When role="document" is (redundantly) used on the body element, still expose the URL via accValue, just like we do for role="application".
  2. Expose ROLE_SYSTEM_DOCUMENT for role="document" (rather than the string "document") as per the spec. (Chrome already does this, so I don't expect backwards compat problems with clients.)
Pushed by mzehe@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/618b155f9f0c
Correct MSAA accValue and accRole for role="document". r=MarcoZ
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla67
QA Whiteboard: [qa-67b-p2]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: